# RADA

./: .dockerignore  .env.example  .env.s3.example  .gitignore  BASELINE_OPERATIONS_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Data-Platform.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.data.yml  docker-compose.monitoring.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  env.example.prod  error.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
apps/streamlit/: dashboard.py
benchmarks/: baseline_frozen_qwen3_0.6b_run_001.json
benchmarks/baseline_qwen3_0.6b_artifacts/: metrics.json  run_info.json
benchmarks/search/: fixture_cases.json
benchmarks/training/: toy_feedback.jsonl
configs/: dev.yaml  llm_cloud.yaml  llm_custom.yaml  llm_distributed.yaml  llm_mock.yaml  llm_ollama.yaml  llm_single_gpu.yaml  model_context.yaml  observability.yaml
configs/data/: export.yaml  usage.yaml
configs/monitoring/: prometheus.prod.yml  prometheus.yml
configs/policies/: aggressive.yaml  balanced.yaml  conservative.yaml
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx  theme.js
data/distilled/: README.md
docs/: Makefile  architecture-overview.md  architecture.md  audit.md  calc.md  conf.py  context-management.md  data-platform.md  decisions.md  human-validation.md  index.md  index.rst  llm-integration.md  models.md  monitoring.md  observability.md  post-mvp-demo.md  requirements-docs.txt  runbook-production.md  runbook.md  search-algorithms.md  search.md  training.md  why-rada.md
docs/api/: audit.rst  calc.rst  core.rst  feedback.rst  index.rst  policies.rst  search.rst
docs/benchmarks/: pre-post-comparison.md
docs/spikes/: kdb-vs-timescale.md
docs/tools/: RAFT-AUDITOR-ADAPTER.md  TOOL-INTEGRATION.md  TOOL-SCHEMA.md
examples/: search_demo.py
issues/: sprint-s13-unsloth-training.yaml
migrations/audit_events/: README.md
migrations/human_feedback/: README.md
migrations/timescale/: README.md  env.py
notebooks/: 00_download_models.ipynb  01_train_and_evaluate.ipynb  distill_teacher_colab.ipynb
runpod/: QUICK_START.md  README.md  config.yaml  disk_manager.sh  notebook_runpod.ipynb  orchestrate_training.sh  resume.sh  setup.sh  setup_s3.sh  train.py  verify_parity.py
scripts/: benchmark_search.py  compare_pre_post_train.py  deploy_check.sh  download_data.sh  export_audit.py  export_reflection.py  reflection_train.py  verify_baseline_operations.py
src/rada/: main.py  (+2 more)
storage/: FILES_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  README_S3.md  bucket_sync.py  disk_monitor.py  ftp_sync.py  requirements.txt  s3_uploader.py  sync_daemon.sh
(+169 files in other folders)
