[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rada"
version = "0.1.0"
description = "Risk-Aware Decision Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RADA Team" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "asyncio>=3.4.3",
  "redis>=5.0.4",
  "asyncpg>=0.29.0",
  "uvicorn[standard]>=0.30.0",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]
data = [
  "aiokafka>=0.10.0",
  "pyzmq>=26.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config"
]
markers = [
  "unit: fast unit tests",
  "integration: integration tests"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
