[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rada"
version = "1.0.0"
description = "Risk-Aware Decision Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RADA Team" }
]
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "redis>=5.0.4",
  "asyncpg>=0.29.0",
  "uvicorn[standard]>=0.30.0",
  "pyyaml>=6.0.1",
  "numpy>=1.26.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "alembic>=1.13.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]
ui = [
  "streamlit>=1.35.0",
  "httpx>=0.27.0"
]
data = [
  "aiokafka>=0.10.0",
  "pyzmq>=26.0.0"
]
unsloth = [
  "unsloth",
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "peft>=0.10.0",
  "trl>=0.8.0",
  "datasets>=2.18.0",
  "accelerate>=0.28.0",
  "huggingface_hub>=0.22.0"
]
notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config"
]
markers = [
  "unit: fast unit tests",
  "integration: integration tests",
  "unsloth: requires unsloth/torch GPU packages",
  "gpu: requires local GPU"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
